testsuite/tests/shadow_include/cannot_shadow_error.compilers.reference
File "cannot_shadow_error.ml", line 24, characters 2-36:
24 |   include Comparable with type t = t
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<<<<<<< HEAD
Error: Illegal shadowing of included type "t/2" by "t/1".
||||||| 23e84b8c4d
Error: Illegal shadowing of included type "t/2" by "t".
=======
Error: Illegal shadowing of included type t/2 by t.
>>>>>>> d505d53be15ca18a648496b70604a7b4db15db2a
File "cannot_shadow_error.ml", line 23, characters 2-19:
23 |   include Printable
       ^^^^^^^^^^^^^^^^^
  Type t/2 came from this include.
File "cannot_shadow_error.ml", line 14, characters 2-23:
14 |   val print : t -> unit
       ^^^^^^^^^^^^^^^^^^^^^
  The value print has no valid type if t/2 is shadowed.
